<resources>
    <string name="app_name">Recipedia</string>
    <string name="hello">Hello, Chef!</string>
    <string name="welcome_to_recipedia">Welcome to Recipedia!</string>
    <string name="recipe_book_title">Recipe Book</string>
    <string name="profile_menu">Profile</string>
    <string name="lets_cook">Let\'s Cook</string>
    <string name="estimation">Estimation Time: </string>
    <string name="time_unit">Minutes</string>
    <string name="step_title">Steps:</string>
    <string name="recipe_result">Previous Result:</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="finish">Finish!</string>
    <string name="enjoy">Enjoy Your Food :)</string>
    <string name="review">Write Your Review:</string>
    <string name="photo">Take A Photo</string>
    <string name="submit">Save</string>
    <string name="review_hint">This recipe is very tasty</string>
    <string name="tips_title">Tips</string>
    <string name="chef_title">Chef</string>
    <string name="note_title">Notes</string>
    <string name="add_note">Add Notes</string>
    <string name="add_note_title_hint">Notes content</string>
    <string name="contact_title">Contact Chef</string>
    <string name="version">Recipedia Version 0.0.1</string>
    <string name="made_by">by Aryo Tinulardhi</string>

    <string name="lorem_ipsum">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy.</string>
</resources>