<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recipe_finish"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        style="@style/BackGroundImageView"
        android:id="@+id/image_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/recipe_finish_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32dp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:gravity="center_horizontal"/>

    <ImageView
        android:id="@+id/finish_image_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_cooking"
        app:layout_constraintTop_toBottomOf="@+id/recipe_finish_title"
        android:layout_marginTop="48dp"
        />

    <TextView
        android:id="@+id/recipe_finish_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32dp"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:text="@string/finish"
        app:layout_constraintTop_toBottomOf="@+id/finish_image_view"/>

    <TextView
        android:id="@+id/recipe_finish_enjoy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:text="@string/enjoy"
        app:layout_constraintTop_toBottomOf="@+id/recipe_finish_text"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="48dp"
        android:layout_marginBottom="24dp">

        <TextView
            android:id="@+id/review_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:layout_marginTop="8dp"
            android:text="@string/review"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/review_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/review_hint"
            android:textSize="14dp"
            app:layout_constraintTop_toBottomOf="@+id/review_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:minLines="5"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical"
            android:gravity="top|left"
            />

        <Button
            android:id="@+id/photo_button"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review_content"
            android:text="@string/photo"
            android:textColor="@color/whiteText"
            android:background="@color/buttonPictureColor"/>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo_button"
            android:layout_marginTop="8dp"
            android:text="@string/submit"
            android:textColor="@color/whiteText"
            android:background="@color/buttonSubmitColor"/>

        <Button
            android:id="@+id/home_button"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submit_button"
            android:layout_marginTop="48dp"
            android:text="@string/recipe_book_title"
            android:textColor="@color/whiteText"
            android:background="@color/midnightBlue"/>








    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>