<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/recipe_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainFragment">

        <TextView
            android:id="@+id/recipe_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32dp"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="center"
            android:gravity="center_horizontal" />

        <androidx.cardview.widget.CardView
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipe_detail_title">

            <ImageView
                android:id="@+id/recipe_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_cooking_pots" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:textSize="18dp"
                android:text="@string/lets_cook" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/estimation_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/play_button"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:text="Estimation Time: 60min"/>

        <RelativeLayout
            android:id="@+id/recipe_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/estimation_time"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_title" />

            <ListView
                android:id="@+id/recipe_detail_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">
            </ListView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recipe_detail_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:scrollbars="vertical"
                tools:listitem="@layout/recipe_detail_item"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/recipe_steps"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_result"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/previous_result_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:scrollbars="vertical"
                tools:listitem="@layout/previous_result"/>

        </RelativeLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>